# simple_os

./: Cargo.toml  rust-toolchain.toml
.cargo/: config  config.toml
src/: gdt.rs  interrupts.rs  lib.rs  main.rs  serial.rs
tests/: basic_boot.rs  should_panic.rs  stack_overflow.rs
