[package]
name = "simple_os"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[dependencies]
bootloader = "0.9.18"
x86_64 = "0.14.2"
uart_16550 = "0.2.0"
spin = "0.9.4"
volatile = "0.2.6"
pic8259 = "0.10.1"
pc-keyboard = "0.5.0"

[package.metadata.bootimage]
run-args = ["-serial", "stdio"]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
             "-display", "none"]
test-success-exit-code = 33         # (0x10 << 1) | 1
